Fix high contrast color for pagination.

--- a/assets/scss/shared-ui/_pagination.scss
+++ b/assets/scss/shared-ui/_pagination.scss
@@ -299,4 +299,15 @@
 	.sui-pagination-results {
 		color: palette(mono, black);
 	}
+
+	// ELEMENT: Filtering tags
+	.sui-pagination-active-filters {
+		.sui-active-filter {
+			background-color: palette(mono, black);
+
+			.sui-active-filter-remove {
+				background-color: palette(mono, black);
+			}
+		}
+	}
 }
